--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sinon": "^7.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-dev-server": "^3.7.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
