--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass-loader": "^7.1.0",
     "sinon": "^7.4.1",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.0",
     "vue-router": "^3.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack-dev-server": "^3.7.2"
