--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
     "markdown-it": "^9.0.1",
+    "markdown-it-checkbox": "^1.1.0",
     "markdown-it-container": "^2.0.0",
     "prettier": "^1.18.2",
     "prismjs": "^1.17.1",
