--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "build:entry": "node build/build.entry.js && node build/build.color.js",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -31,6 +32,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "file-save": "^0.2.0",
+    "json-templater": "^1.2.0",
     "lint-staged": "^8.1.5",
     "markdown-it": "^9.0.1",
     "markdown-it-checkbox": "^1.1.0",
