--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "normalize-wheel": "^1.0.1",
     "popper.js": "^1.15.0",
     "resize-observer-polyfill": "^1.5.1",
-    "throttle-debounce": "^2.1.0"
+    "throttle-debounce": "^2.1.0",
+    "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
