--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async-validator": "^3.0.2",
     "deepmerge": "^4.0.0",
+    "enquire.js": "^2.1.6",
     "normalize-wheel": "^1.0.1",
     "popper.js": "^1.15.0",
     "resize-observer-polyfill": "^1.5.1",
