--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -166,6 +166,10 @@
           {
             "path": "/descriptions",
             "title": "Descriptions 描述列表"
+          },
+          {
+            "path": "/empty",
+            "title": "Empty 空状态"
           }
         ]
       },
