--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,30 +11,10 @@
   "[javascript]": {
     "editor.formatOnSave": true
   },
-  // eslint 插件配置
-  "eslint.enable": true,
-  "eslint.run": "onType",
-  "eslint.validate": [
-    {
-      "language": "vue",
-      "autoFix": true
-    },
-    {
-      "language": "html",
-      "autoFix": true
-    },
-    {
-      "language": "javascript",
-      "autoFix": true
-    },
-    {
-      "language": "javascriptreact",
-      "autoFix": true
-    }
-  ],
-  "eslint.alwaysShowStatus": true,
-  "eslint.autoFixOnSave": true,
   // vetur 格式化配置
+  "vetur.format.defaultFormatter.html": "prettier",
   "vetur.format.defaultFormatter.js": "prettier",
-  "vetur.format.defaultFormatter.css": "prettier"
+  "vetur.format.defaultFormatter.scss": "prettier",
+  "vetur.format.defaultFormatter.css": "prettier",
+  "vetur.format.defaultFormatter.ts": "prettier"
 }
