--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
   "[javascript]": {
     "editor.formatOnSave": true
   },
+  "eslint.autoFixOnSave": true,
   // vetur 格式化配置
   "vetur.format.defaultFormatter.html": "prettier",
   "vetur.format.defaultFormatter.js": "prettier",
