--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,16 @@
 {
-  "files.trimFinalNewlines": true, // 删除掉文件结尾多余的空行
-  "files.insertFinalNewline": true, // 文件结尾保留一个空行
   "editor.tabSize": 2,
   "editor.formatOnSave": false, //关闭编辑器保存自动格式化
-  "editor.quickSuggestions": {
-    "other": true,
-    "comments": true,
-    "strings": true
-  },
   "eslint.autoFixOnSave": true,
+  // 添加 vue 支持
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    {
+      "language": "vue",
+      "autoFix": true
+    }
+  ],
   // vetur 格式化配置
   "vetur.format.defaultFormatter.html": "prettier",
   "vetur.format.defaultFormatter.js": "prettier",
