--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -199,6 +199,10 @@
           {
             "path": "/notification",
             "title": "Notification 通知"
+          },
+          {
+            "path": "/skeleton",
+            "title": "Skeleton 骨架屏"
           }
         ]
       },
