build: 完成应用打包脚本

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "bootstrap": "npm i",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "build": "npm run build:entry && npm run lint && npm run build:component && npm run build:docs",
+    "build:docs": "vue-cli-service build",
     "build:entry": "node build/build.entry.js && node build/build.color.js",
+    "build:component": "node build/build.component.js",
+    "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -31,10 +33,16 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "core-js": "^2.6.5",
+    "cross-env": "^5.2.1",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "file-save": "^0.2.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^4.0.2",
     "json-templater": "^1.2.0",
     "lint-staged": "^8.1.5",
     "markdown-it": "^9.0.1",
@@ -42,6 +50,7 @@
     "markdown-it-container": "^2.0.0",
     "prettier": "^1.18.2",
     "prismjs": "^1.17.1",
+    "progress": "^2.0.3",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "sinon": "^7.4.1",
