--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -204,6 +204,11 @@
             "path": "/skeleton",
             "title": "Skeleton 骨架屏"
           }
+          ,
+          {
+            "path": "/result",
+            "title": "Result 结果"
+          }
         ]
       },
       {
