--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "conventional-changelog-cli": "^2.0.23",
     "core-js": "^2.6.5",
     "cross-env": "^5.2.1",
     "cz-conventional-changelog": "^3.0.2",
@@ -58,7 +59,6 @@
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "sinon": "^7.4.1",
-    "standard-version": "^7.0.0",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.3.0",
     "vue-router": "^3.1.2",
