feat(statistic): 新增统计数值
展示统计数值。
- 当需要突出某个或某组数字时。
-当需要展示带描述的统计类数据时使用。

--- a/components.json
+++ b/components.json
@@ -70,6 +70,7 @@
   "skeleton": "./src/components/skeleton/index.js",
   "slider": "./src/components/slider/index.js",
   "spinner": "./src/components/spinner/index.js",
+  "statistic": "./src/components/statistic/index.js",
   "step": "./src/components/step/index.js",
   "steps": "./src/components/steps/index.js",
   "submenu": "./src/components/submenu/index.js",
