--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "colors-console": "^1.0.3",
     "conventional-changelog-cli": "^2.0.23",
     "core-js": "^2.6.5",
     "cross-env": "^5.2.1",
