--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -123,6 +123,10 @@
             "title": "ColorPicker 颜色选择器"
           },
           {
+            "path": "/icon-picker",
+            "title": "IconPicker 图标选择器"
+          },
+          {
             "path": "/transfer",
             "title": "Transfer 穿梭框"
           },
