--- a/components.json
+++ b/components.json
@@ -88,5 +88,6 @@
   "tooltip": "./src/components/tooltip/index.js",
   "transfer": "./src/components/transfer/index.js",
   "tree": "./src/components/tree/index.js",
+  "treemap": "./src/components/treemap/index.js",
   "upload": "./src/components/upload/index.js"
 }
